[project]
name = "gmail-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.192.0",
    "google-auth>=2.49.0",
    "google-auth-oauthlib>=1.3.0",
    "groq>=1.0.0",
    "python-dotenv>=1.2.2",
]
